# stm32g0-led-grid

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
icn2037/: Cargo.toml
icn2037/src/: lib.rs
src/: lifegame.rs  main.rs  patterns.rs
