workspace = { members = ["icn2037"] }
[package]
name = "stm32g0-led-grid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [
    "time-driver-any",
    "stm32g070kb",
    "memory-x",
    "unstable-pac",
    "exti",
] }
embassy-sync = { version = "0.5.0" }
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = ["tick-hz-32_768"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3" }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.8", default-features = false }
portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }

icn2037 = { path = "icn2037" }
embedded-graphics = "0.8.1"
static_cell = { version = "2.0.0", features = ["nightly"] }
rand = { version = "0.8.5", default-features = false }
rand_xorshift = "0.3.0"
build-info = { version = "0.0.36", default-features = false }
embedded-storage = "0.3.1"

[build-dependencies]
build-info-build = { version = "0.0.36", features = ["git"] }

[profile.release]
debug = 2

[features]
default = ["defmt"]
defmt = [
    "embassy-stm32/defmt",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "panic-probe/print-defmt",
]
