[package]
name = "icn2037"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0.0"
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0", features = [] }

[features]
defmt = ["dep:defmt", "embassy-sync/defmt"]
